[tool.poetry]
name = "sualbsp-solver"
version = "0.1.0"
description = "Solver for the sequence-dependent assembly-line balancing and scheduling problem (SUALBPS)"
authors = ["Jan Niklas Engel <engeljanniklas@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
flake8 = "^4.0.1"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
mypy = "^0.942"
pre-commit = "^2.18.1"

[tool.flake8]
max-line-length = 160

[tool.pytest.ini_options]
addopts = "--cov=sualbsp_solver"
testpaths = [
    "tests",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
